# TC4017.10

./: .gitignore  README.md
A00464290_A4.2/: compute_statistics.py  convert_numbers.py  word_count.py
A00464290_A5.2/: compute_sales.py
A00464290_A6.2/: README.md  pyproject.toml  setup.py  unittest-output.txt
A00464290_A6.2/coverage_html_report/: d_650dd39309882eb0_customers_manager_py.html  d_650dd39309882eb0_hotels_manager_py.html  d_650dd39309882eb0_reservations_manager_py.html  d_b57228d723595629_hotel_py.html  d_b57228d723595629_room_py.html  d_d0a5e1f485a27d20_customer_py.html  d_f72f43695c92807c_reservation_py.html  index.html  status.json
A00464290_A6.2/reservations_system/: customers_manager.py  hotels_manager.py  reservations_manager.py
A00464290_A6.2/reservations_system/customer/: customer.py
A00464290_A6.2/reservations_system/hotel/: hotel.py  room.py
A00464290_A6.2/reservations_system/reservation/: reservation.py
A00464290_A6.2/tests/: customers_manager_test.py  customers_test.py  hotels_manager_test.py  hotels_test.py  reservations_manager_test.py  reservations_test.py  rooms_test.py
Semana04/: compute_statistics.py  convert_numbers.py
